artifacthub/library/general/gpunodetargeting/1.0.0/samples/gpu-pod-node-selector-key-only/constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sGpuNodeTargeting
metadata:
  name: require-gpu-node-targeting
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
  parameters:
    nodeLabelKey: "nvidia.com/gpu.present"
